--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "venn.js",
-  "version": "0.2.20",
+  "name": "@dinmo-io/venn.js",
+  "version": "0.2.23",
   "author": "Ben Frederickson <ben@benfrederickson.com> (http:/www.benfrederickson.com)",
   "url": "https://github.com/benfred/venn.js/issues",
   "devDependencies": {
-    "rollup": "^0.59.4",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "tape": "4",
-    "uglify-js": "3",
-    "jshint": "^2.8.0"
+    "rollup": "^4.24.3",
+    "@rollup/plugin-commonjs": "^28.0.1",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "tape": "5.9.0",
+    "uglify-js": "3.19.3",
+    "jshint": "^2.13.6"
   },
   "description": "Area Proportional Venn and Euler Diagrams",
   "main": "build/venn.js",
@@ -40,14 +40,16 @@
     "esnext": true
   },
   "scripts": {
-    "pretest": "rm -rf build && rollup -c && cp build/venn.js .",
+    "pretest": "rm -rf build && rollup --bundleConfigAsCjs -c && cp build/venn.js .",
     "test": "jshint src/*.js && tape 'tests/**/*test.js'",
     "prepublish": "npm run test && uglifyjs build/venn.js -c -m -o build/venn.min.js",
     "postpublish": "zip -j build/venn.zip -- LICENSE README.md build/venn.js build/venn.min.js"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "dependencies": {
-    "fmin": "0.0.2",
-    "d3-selection": "^1.0.2",
-    "d3-transition": "^1.0.1"
+    "d3-selection": "^3.0.0",
+    "d3-transition": "^3.0.1"
   }
 }
